--- a/status/waybar/style.css
+++ b/status/waybar/style.css
@@ -1,41 +1,41 @@
 * {
-    font-size: 18px;
+	font-size: 18px;
 	font-weight: bold;
 	font-family: 'ComicShannsMono Nerd Font';
 }
 
 #waybar {
-    background-color: #24273a;
+	background-color: #24273a;
 	background: transparent;
-    color: #eb87b6;
+	color: #eb87b6;
 }
 
 button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    border-radius: 0;
-    padding: 0 5px;
+	box-shadow: inset 0 -3px transparent;
+	border: none;
+	border-radius: 0;
+	padding: 0 5px;
 }
 
 #workspaces button {
-    background-color: #24273a;
-    color: #ffffff;
+	background-color: #24273a;
+	color: #ffffff;
 }
 
 #workspaces button:hover {
-    background: rgba(0,0,0,0.2);
+	background: rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.focused {
-    background-color: #285577;
+	background-color: #285577;
 }
 
 #workspaces button.urgent {
-    background-color: #900000;
+	background-color: #900000;
 }
 
 #workspaces button.active {
-    background-color: #285577;
+	background-color: #285577;
 }
 
 #clock,
@@ -49,51 +49,51 @@ button {
 #window,
 
 
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+.modules-left>widget:first-child>#workspaces {
+	margin-left: 0;
 }
 
 
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+.modules-right>widget:last-child>#workspaces {
+	margin-right: 0;
 }
 
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
+	to {
+		background-color: #ffffff;
+		color: #000000;
+	}
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+	background-color: #f53c3c;
+	color: #ffffff;
+	animation-name: blink;
+	animation-duration: 0.5s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
 
 label:focus {
-    background-color: #000000;
+	background-color: #000000;
 }
 
-#tray > .passive {
-    -gtk-icon-effect: dim;
+#tray>.passive {
+	-gtk-icon-effect: dim;
 }
 
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+#tray>.needs-attention {
+	-gtk-icon-effect: highlight;
+	background-color: #eb4d4b;
 }
 
 #idle_inhibitor {
-    font-size: 15px;
-    background-color: #333333;
-    padding: 5px;
+	font-size: 15px;
+	background-color: #333333;
+	padding: 5px;
 }
 
 #idle_inhibitor.activated {
-    background-color: #285577;
+	background-color: #285577;
 }
