feat: waybar customs

--- a/status/waybar/style.css
+++ b/status/waybar/style.css
@@ -7,16 +7,17 @@
 	background-color: transparent;
 	/* background: transparent; */
 	/* background: #24273a; */
+	/* background: rgba(36, 39, 58, 0.5); */
 
 }
 
 #tooltip {
 	color: #eb87b6;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 #tooltip * {
 	color: #eb87b6;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #waybar {
@@ -27,7 +28,7 @@
     border: 2px solid #FC50B4; /* Combine width, style, and color */
     color: #FC50B4;
 	padding: 0rem 0rem 0rem 0rem;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #clock,
@@ -46,13 +47,13 @@
 #cpu {
     border: 2px solid #7ac3ff; /* Combine width, style, and color */
     color: #7ac3ff;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #memory {
     border: 2px solid #D179EE; /* Combine width, style, and color */
     color: #D179EE;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #pulseaudio {
@@ -61,7 +62,7 @@
 	border-right: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 1rem 0rem 0rem 1rem;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #clock {
@@ -70,7 +71,7 @@
 	border-left: none;
 	padding: 0rem 1rem 0rem 0rem;
 	border-radius: 0rem 1rem 1rem 0rem;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #battery {
@@ -79,7 +80,7 @@
 	border-right: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 1rem 0rem 0rem 1rem;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 #bluetooth { 
     border: 2px solid #4FC8B7; /* Combine width, style, and color */
@@ -88,7 +89,7 @@
 	border-left: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 0rem 0rem 0rem 0rem;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #battery.critical:not(.charging) {
@@ -98,18 +99,18 @@
 	animation-timing-function: linear;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 
 #battery.charging {
 	color: #4FC8B7;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #battery.warning:not(.charging) {
 	color: #FC50B4;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
 
 #network {
@@ -118,5 +119,5 @@
 	border-left: none;
 	padding: 0rem 1rem 0rem 0rem;
 	border-radius: 0rem 1rem 1rem 0rem;
-	background: rgba(36, 39, 58, 0.4);
+	background: rgba(36, 39, 58, 0.6);
 }
