--- a/status/waybar/style.css
+++ b/status/waybar/style.css
@@ -43,6 +43,7 @@
 #window,
 #tooltip,
 #workspaces
+#custom-notifs
 #custom-mic
 
 #cpu {
@@ -72,6 +73,16 @@
 	border-right: none;
 	border-left: none;
 	padding: 0rem 0rem 0rem 1rem;
+	border-radius: 0rem 0rem 0rem 0rem;
+	background: rgba(36, 39, 58, 0.6);
+}
+
+#custom-notifs {
+    border: 2px solid #eb87b6; /* Combine width, style, and color */
+    color: #eb87b6;
+	border-right: none;
+	border-left: none;
+	padding: 0rem 0rem 0rem 0rem;
 	border-radius: 0rem 0rem 0rem 0rem;
 	background: rgba(36, 39, 58, 0.6);
 }
