fix: rofi mako history

--- a/status/waybar/style.css
+++ b/status/waybar/style.css
@@ -13,11 +13,11 @@
 
 #tooltip {
 	color: #eb87b6;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 #tooltip * {
 	color: #eb87b6;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #waybar {
@@ -28,7 +28,16 @@
     border: 2px solid #FC50B4; /* Combine width, style, and color */
     color: #FC50B4;
 	padding: 0rem 0rem 0rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
+}
+#workspaces button {
+    padding: 0;
+    color: #FC50B4;
+    margin: 0;
+	margin-left: 0;
+	margin-right: 0;
+    min-width: 0;
+    border: none;
 }
 
 #clock,
@@ -50,21 +59,21 @@
 #cpu {
     border: 2px solid #D179EE; /* Combine width, style, and color */
     color: #D179EE;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 	border-right: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 1rem 0rem 0rem 1rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #memory {
     border: 2px solid #D179EE; /* Combine width, style, and color */
     color: #D179EE;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 	border-left: none;
 	padding: 0rem 1rem 0rem 1rem;
 	border-radius: 0rem 1rem 1rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #pulseaudio {
@@ -73,7 +82,7 @@
 	border-right: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 1rem 0rem 0rem 1rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #clock {
@@ -83,7 +92,7 @@
 	border-left: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 0rem 0rem 0rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #custom-notifs {
@@ -93,7 +102,7 @@
 	border-left: none;
 	padding: 0rem 0rem 0rem 0rem;
 	border-radius: 0rem 0rem 0rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #custom-kdec {
@@ -102,7 +111,7 @@
 	border-right: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 1rem 0rem 0rem 1rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #custom-mic {
@@ -111,7 +120,7 @@
 	border-left: none;
 	padding: 0rem 1rem 0rem 0rem;
 	border-radius: 0rem 1rem 1rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #battery {
@@ -119,7 +128,7 @@
     color: #7ac3ff;
 	padding: 0rem 1rem 0rem 1rem;
 	border-radius: 1rem 1rem 1rem 1rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 #bluetooth { 
     border: 2px solid #4FC8B7; /* Combine width, style, and color */
@@ -128,7 +137,7 @@
 	border-left: none;
 	padding: 0rem 0rem 0rem 1rem;
 	border-radius: 0rem 0rem 0rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #battery.critical:not(.charging) {
@@ -138,18 +147,18 @@
 	animation-timing-function: linear;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 
 #battery.charging {
 	color: #4FC8B7;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #battery.warning:not(.charging) {
 	color: #FC50B4;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
 
 #network {
@@ -158,5 +167,5 @@
 	border-left: none;
 	padding: 0rem 1rem 0rem 0rem;
 	border-radius: 0rem 1rem 1rem 0rem;
-	background: rgba(36, 39, 58, 0.6);
+	background: rgba(36, 39, 58, 0.9);
 }
